# epoxy-harden

./: .dir-locals.el  .gitignore  README.md  default.nix  epoxy-harden.cabal  epoxy-harden.nix  hie.yaml  pkgs.nix  shell.nix  stack.yaml
.github/workflows/: main.yml
app/: EpoxyDtb.hs  EpoxyHarden.hs  Main.hs
doc/: epoxy.xml
examples/: application.json  machine.json
nix/: build.nix  ci.nix  release.nix  sources.json
src/: AddressSpace.hs  ApplicationDescription.hs  ApplicationDescriptionParser.hs  BootImage.hs  CodeGen.hs  CppAst.hs  DhallAppDescription.hs  DhallUtils.hs  DtbConvert.hs  ElfReader.hs  ElfWriter.hs  EpoxyMain.hs  EpoxyState.hs  FrameAlloc.hs  GenericPageTable.hs  Interval.hs  MachineDescription.hs  Normalization.hs  PageTable.hs  PageTableFeatures.hs  PhysMem.hs  RiscV.hs  StackAllocation.hs  Util.hs  Writer.hs  X86.hs
src/RiscV/: PageTable.hs
src/Writer/: Elf.hs
test/: AddressSpaceSpec.hs  ElfWriterSpec.hs  IntervalSpec.hs  PhysMemSpec.hs
