name:               epoxy-harden
version:            0.1.0.0
license:            AGPL-3
license-file:       LICENSE
copyright:          Copyright (c) 2018-2020 Julian Stecklina
author:             Julian Stecklina
maintainer:         js@alien8.de
category:           Operating System
homepage:           https://github.com/blitzclone/epoxy-harden#readme
build-type:         Simple
extra-source-files: README.md
cabal-version:      >= 1.10

library
  exposed-modules:  AddressSpace
                    ApplicationDescription
                    ApplicationDescriptionParser
                    BootImage
                    CodeGen
                    ElfReader
                    Interval
                    MachineDescription
                    Normalization
                    PhysMem
                    StackAllocation
                    Util
                    Writer
  other-modules:    CppAst
                    Writer.Elf
                    EpoxyState
                    FrameAlloc
                    PageTable
                    RiscV
  hs-source-dirs:   src
  build-depends:    base       >= 4.7 && < 5
                  , binary
                  , bytestring
                  , containers
                  , dhall
                  , elf
                  , lens
                  , mtl
                  , scientific
                  , text
  default-language: Haskell2010
  ghc-options:      -fwarn-unused-imports

executable epoxy-harden
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base                 >= 4.7 && < 5
                  , bytestring
                  , epoxy-harden
                  , filepath
                  , optparse-applicative
                  , text
  default-language: Haskell2010
  ghc-options:      -fwarn-unused-imports

test-suite epoxy-harden-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      AddressSpaceSpec
                      ElfWriterSpec
                      IntervalSpec
                      PhysMemSpec
  hs-source-dirs:     test
  build-depends:      base
                    , QuickCheck
                    , bytestring
                    , elf
                    , epoxy-harden
                    , hspec
                    , quickcheck-instances
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -fwarn-unused-imports
